solved mobile white space

--- a/css/blog.css
+++ b/css/blog.css
@@ -8,9 +8,6 @@ body{
   background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding-top: 70px;
-  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
-  margin: 0;
 }
 
 
@@ -201,6 +198,12 @@ body{
     background: white;
     color : #2f3640;
   }
+}
+
+/* Get rid of horizontal bar on mobile */
+.container{
+  padding-left: 0;
+  padding-right: 0;
 }
 
 /* CARDS START */
